feat : ApiCaller 등록하고 리스트 가져오는 json api 생성 - json 파싱 및 변환을 위해 jackson core, data-bind 의존성 추가 - 어노테이션으로 VO 및 Entity 쉽게 생성을 위해 lombak 의존성 추가 - Application.main() 메서드 자동 실행을 위해 application 플러그인 추가 및 실행 클래스 등록 - DataStructure인 ApiCaller  클래스 추가 - main 메서드에 ApiCaller를 등록하고 리스트 가져오는 라우터로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,26 @@
-plugins {
-    id 'java'
-}
+apply plugin: 'java'
+apply plugin: 'application'
 
 group 'me.dakbutfly'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+mainClassName = "me.dakbutfly.spark_api.Application"
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.0'
+
+    // json
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.5'
+
+    // webframwework
     compile "com.sparkjava:spark-core:2.7.2"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    testCompile 'junit:junit:4.12'
 }
